<resources>
    <string name="app_name">CareMinder</string>
    <string name="back_button">메인으로</string>
    <string name="info">현재 응급환자가 몰려 지연이 발생하고 있습니다. 환자분들의 시급함을 충분히 인지하고 있으나 응급실이라는 특성상 우선순위에  맞추어 진료중이오니 환자분들의 이해부탁드립니다.</string>
    <string name="cancel">취소하기</string>
    <string name="send">요청 완료</string>
    <string name="group38">전송 취소하기</string>
    <string name="red_cancel">다시 녹음하기</string>
    <string name="right_cancel">추가 전송하기</string>
    <string name="boxedit">안녕하세요, 스크린샷을 찍은 것이 맞습니까?</string>
    <string name="textfeld">맞습니다</string>

    <string name="question_title">궁금한 사항이 있으시다면,</string>
    <string name="question_button">질문을 말씀해주세요</string>
    <string name="subtitle">자동으로 간호사에게 전달됩니다</string>
    <string name="request_title">빠른 해결을 원하신다면,</string>
    <string name="request_button">요청사항을 말씀해주세요</string>
    <string name="amount_of_requests">현재 누적된 요청사항</string>
    <string name="stand_by">대기</string>
    <string name="in_progress">진행중</string>
    <string name="completed">완료</string>


    <string-array name="task">
        <item>요청사항</item>
        <item>질문사항</item>
    </string-array>

    <string-array name="patient">
        <item>내 담당 환자</item>
        <item>김 O 희</item>
        <item>이 O 연</item>
        <item>황 O 민</item>
    </string-array>

    <string-array name="zone">
        <item>응급실</item>
        <item>메인1</item>
        <item>메인2</item>
    </string-array>

    <string-array name="my_task">
        <item>업무별 | 질문사항</item>
    </string-array>

    <string-array name="my_patient">
        <item>환자별 | 내 담당 환자</item>
    </string-array>

    <string-array name="my_zone">
        <item>구역별 | 응급실</item>
    </string-array>
</resources>