<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PatientActivity"
    style="@style/app">

<LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/amount_of_requests"/>

        <TextView
            android:id="@+id/amount_of_requests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/stand_by" />

        <TextView
            android:id="@+id/waiting_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/in_progress" />

        <TextView
            android:id="@+id/progress_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/completed" />

        <TextView
            android:id="@+id/complete_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"/>
    </LinearLayout>


    </LinearLayout>


    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:scrollbars="none"
        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/header" >

        <LinearLayout
            android:id="@+id/patient_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/horizontal_scroll_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal"/>

            <LinearLayout
                android:id="@+id/horizontal_scroll_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal" />

        </LinearLayout>

    </HorizontalScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:orientation="horizontal"
        android:id="@+id/request_boxes"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="Suspicious0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/question_title"
                android:textSize="@dimen/text_size_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/patient_question_background"
                android:gravity="center"
                android:onClick="OnQuestionButtonClick"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_question_mark_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/question_button"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/subtitle"
                    android:textSize="@dimen/text_size_h1" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#000000"
            android:layout_marginHorizontal="16dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="Suspicious0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_title"
                android:textSize="@dimen/text_size_title"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:onClick="OnRequestButtonClick"
                android:background="@drawable/patient_request_background">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_mic_none_24"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_button"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/text_size_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/text_size_h1"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/black"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:singleLine="true"
            android:text="@string/info"
            android:drawableLeft="@drawable/baseline_info_24"
            android:drawablePadding="10dp"/>


    </LinearLayout>



    <FrameLayout
        android:id="@+id/popupContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </FrameLayout>


    <Button
        android:id="@+id/list_button"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="start|bottom"
        android:layout_marginStart="1100dp"
        android:layout_marginBottom="275dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>